--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_swiper: ^1.1.6
   provider: ^4.3.1
+  flip_card: ^0.4.4
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +69,7 @@ flutter:
     #     - asset: fonts/Schyler-Regular.ttf
     #     - asset: fonts/Schyler-Italic.ttf
     #       style: italic
-    - family: Pacifio
+    - family: Pacifico
       fonts:
         - asset: assets/fonts/Pacifico.ttf
     - family: Sacramento
