--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flutter_swiper: ^1.1.6
   provider: ^4.3.1
   flip_card: ^0.4.4
-  http: 
+  http:
+  flutter_form_builder: ^3.10.1 
 
 dev_dependencies:
   flutter_test:
