--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   provider: ^4.3.1
   flip_card: ^0.4.4
   http:
-  flutter_form_builder: ^3.10.1 
+  flutter_form_builder: ^3.10.1
+  shared_preferences: ^0.5.10
 
 dev_dependencies:
   flutter_test:
